TEST_PROGRAMS/INVALID/05/func_within_func.go
/* Declaring a function within a function.  */

package main

func main() {
	func func_within_a_func() {} // Error: Can't declare a function withing a function.
}
